| Summary: | ASTERISK-27200: manager: hook event is not being raised | ||
| Reporter: | Kevin Harwell (kharwell) | Labels: | |
| Date Opened: | 2017-08-15 13:11:33 | Date Closed: | 2017-08-17 06:52:19 |
| Priority: | Major | Regression? | Yes |
| Status: | Closed/Complete | Components: | Core/ManagerInterface |
| Versions: | 15.0.0-beta1 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | A hook handler has been attached, but is not being called. It appears that if a stream is not attached then the send_string function that is called from astman_append is never called, which in turn raises the event for the hook.
This appears to have been broken when the iostream code went in. | ||
| Comments: | By: Friendly Automation (friendly-automation) 2017-08-17 06:52:21.070-0500 Change 6229 merged by Jenkins2: manager: hook event is not being raised [https://gerrit.asterisk.org/6229|https://gerrit.asterisk.org/6229] By: Friendly Automation (friendly-automation) 2017-08-17 06:56:17.993-0500 Change 6231 merged by Jenkins2: manager: hook event is not being raised [https://gerrit.asterisk.org/6231|https://gerrit.asterisk.org/6231] By: Friendly Automation (friendly-automation) 2017-08-17 07:01:23.172-0500 Change 6230 merged by Jenkins2: manager: hook event is not being raised [https://gerrit.asterisk.org/6230|https://gerrit.asterisk.org/6230] | ||